# ricekit

./: DESIGN.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
ricekit/: __init__.py  widgets.py
tests/: test_footer.py
