[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ricekit"
version = "0.3.0"
description = "A developer's TUI suite for Textual — themes, widgets, modals, icons, and the design system behind ltui, jtui, and sctui"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gheat" }]
requires-python = ">=3.11"
dependencies = ["textual>=1.0"]
keywords = ["tui", "textual", "terminal", "design-system", "widgets", "themes"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/Gheat1/ricekit"
Repository = "https://github.com/Gheat1/ricekit"
Issues = "https://github.com/Gheat1/ricekit/issues"

[project.scripts]
ricekit-gallery = "ricekit.gallery:main"

[tool.setuptools]
packages = ["ricekit"]
